# scratch

./: .gitignore  README.md  compilation_instructions.txt  serialization-object-test  serialization-object-test.c  serialization-object-test.h  serialization-test.c  tpl-main.c
CMake/: CMakeLists.txt  Config.h.in
include/: ext.h  patricia-test.h
lib/: ext.c  routecompare.c  routecompare.h
pysubnettree/: main.c  patricia-test.c  patricia.c  subnettree-test.c
rax/: nn-routeviews-rv6-20220411-1200.pfx2as.data  output.data  rax-test.c  routeviews-rv6-20220411-1200.pfx2as.data
src/: Makefile  main.c
test/hashmap-test/: asn-lookup-test.c
